fixed grid layout - now smaller icons on mobile

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -33,6 +33,8 @@ $grid-max-widths: (
  lg: 992px
 );
 
+$grid-padding-width:  0px;
+
 // Named Color Variables
 // --------------------------------------------------
 // Named colors makes it easy to reuse colors on various components.
